reverse cursed technique

--- a/notebooks/deployment.ipynb
+++ b/notebooks/deployment.ipynb
@@ -4,15 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BoxBunny Unit Tests\n",
-    "Quick unit tests for individual components."
+    "# BoxBunny Deployment & Operation\n",
+    "Use this notebook to build, calibrate, and run the boxing robot system.\n",
+    "\n",
+    "**Workflow:**\n",
+    "1. **Setup**: Configure environment.\n",
+    "2. **Build**: Compile ROS workspace (if code changed).\n",
+    "3. **Calibrate**: Tune IMU for punches.\n",
+    "4. **Launch**: Run the Action Recognition System.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup Environment\n"
+    "## 1. Environment Setup\n",
+    "Generates the environment file used by all subsequent commands."
    ]
   },
   {
@@ -30,15 +37,15 @@
     "source /opt/ros/humble/setup.bash\n",
     "source /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/install/setup.bash 2>/dev/null || true\n",
     "SH\n",
-    "echo \"Environment ready\""
+    "echo \"Environment ready at /tmp/boxbunny_env.sh\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. GUI Standalone Test\n",
-    "Test the visual interface layout."
+    "## 2. Build Workspace\n",
+    "Run this if you have modified any C++ or ROS nodes."
    ]
   },
   {
@@ -47,15 +54,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_gui/boxbunny_gui && python gui_main.py'"
+    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
+    "  colcon build --symlink-install'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. IMU Calibration GUI\n",
-    "Use this for checking IMU connection and calibrating punches."
+    "## 3. Calibrate IMU\n",
+    "Launch this GUI to calibrate the punch thresholds. **Close it when done.**"
    ]
   },
   {
@@ -71,8 +80,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Main System (Hybrid Mode)\n",
-    "Optimized Launch with YOLO Pose + IMU Fusion."
+    "## 4. Run Action Recognition (Hybrid Mode)\n",
+    "Launches the main GUI with **YOLO Nano (Pose)** and **IMU Fusion**.\n",
+    "Click **[Calibrate IMU]** in the GUI if you haven't done step 3."
    ]
   },
   {
@@ -86,10 +96,29 @@
     "  python tools/inference/live_infer_rgbd.py \\\n",
     "    --model-config configs/rgbd_boxing_anticipation.py \\\n",
     "    --model-checkpoint /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/models/action_prediction_model/best_acc_82.4_epoch_161.pth \\\n",
-    "    --yolo-model ../models/checkpoints/yolo26n.pt \\\n",
+    "    --yolo-model checkpoints/yolo26n.pt \\\n",
     "    --fps 30 \\\n",
     "    --rgb-res 640x480 \\\n",
     "    --depth-res 640x480'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Full ROS System (Deployment)\n",
+    "Launch the entire robot stack (LLM, Vision, Drill Manager, etc)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+    "  ros2 launch boxbunny_bringup boxbunny_system.launch.py \\\n",
+    "  enable_imu:=true enable_llm:=true enable_gui:=true'"
    ]
   }
  ],
