--- a/notebooks/unit_tests.ipynb
+++ b/notebooks/unit_tests.ipynb
@@ -34,6 +34,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25827cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
+    "  colcon build --symlink-install && \\\n",
+    "  source install/setup.bash'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +77,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && ros2 run boxbunny_imu imu_punch_gui'"
+    "boxbunny_bringup --symlink-install'\n",
+    "# Run IMU calibration GUI only\n",
+    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
+    "  source install/setup.bash && \\\n",
+    "  ros2 launch boxbunny_bringup imu_only.launch.py'"
    ]
   },
   {
