update but have bugs

--- a/notebooks/unit_tests.ipynb
+++ b/notebooks/unit_tests.ipynb
@@ -1,135 +1,191 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# BoxBunny Unit Tests\n",
-    "Quick unit tests for individual components."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup Environment\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "cat > /tmp/boxbunny_env.sh <<'SH'\n",
-    "source ~/miniconda3/etc/profile.d/conda.sh\n",
-    "conda activate boxing_ai\n",
-    "export PYTHONNOUSERSITE=1\n",
-    "export SETUPTOOLS_USE_DISTUTILS=stdlib\n",
-    "source /opt/ros/humble/setup.bash\n",
-    "source /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/install/setup.bash 2>/dev/null || true\n",
-    "SH\n",
-    "echo \"Environment ready\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25827cd7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
-    "  colcon build --symlink-install && \\\n",
-    "  source install/setup.bash'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. GUI Standalone Test\n",
-    "Test the visual interface layout."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_gui/boxbunny_gui && python gui_main.py'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. IMU Calibration GUI\n",
-    "Use this for checking IMU connection and calibrating punches."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boxbunny_bringup --symlink-install'\n",
-    "# Run IMU calibration GUI only\n",
-    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
-    "  source install/setup.bash && \\\n",
-    "  ros2 launch boxbunny_bringup imu_only.launch.py'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Main System (Hybrid Mode)\n",
-    "Optimized Launch with YOLO Pose + IMU Fusion."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-    "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/action_prediction && \\\n",
-    "  python tools/inference/live_infer_rgbd.py \\\n",
-    "    --model-config configs/rgbd_boxing_anticipation.py \\\n",
-    "    --model-checkpoint /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/models/action_prediction_model/best_acc_82.4_epoch_161.pth \\\n",
-    "    --yolo-model ../models/checkpoints/yolo26n.pt \\\n",
-    "    --fps 30 \\\n",
-    "    --rgb-res 640x480 \\\n",
-    "    --depth-res 640x480'"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "boxing_ai",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.19"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# BoxBunny Unit Tests\n",
+                "Quick unit tests for individual components."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Setup Environment\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%%bash\n",
+                "cat > /tmp/boxbunny_env.sh <<'SH'\n",
+                "source ~/miniconda3/etc/profile.d/conda.sh\n",
+                "conda activate boxing_ai\n",
+                "export PYTHONNOUSERSITE=1\n",
+                "export SETUPTOOLS_USE_DISTUTILS=stdlib\n",
+                "source /opt/ros/humble/setup.bash\n",
+                "source /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/install/setup.bash 2>/dev/null || true\n",
+                "SH\n",
+                "echo \"Environment ready\""
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Build Workspace"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "build_ws",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
+                "  colcon build --symlink-install && \\\n",
+                "  source install/setup.bash'"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 1. GUI Standalone Test\n",
+                "Test the main GUI layout (no ROS needed)."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "!bash -lc 'source /tmp/boxbunny_env.sh && cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_gui/boxbunny_gui && python gui_main.py'"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 2. IMU Calibration GUI\n",
+                "Use this for checking IMU connection and calibrating punches.\n",
+                "\n",
+                "**Workflow:**\n",
+                "1. Wait for IMU connection (green values in display)\n",
+                "2. Select a profile (Straights Only, All Punches, etc.)\n",
+                "3. Click 'Calibrate Default' or 'Calibrate All'\n",
+                "4. Follow prompts - hold still, then punch when prompted\n",
+                "5. Click 'Verify File' to test detection\n",
+                "6. Punch the sensor - detected punches appear in the log"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Build and run IMU calibration GUI\n",
+                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
+                "  colcon build --packages-select boxbunny_imu --symlink-install && \\\n",
+                "  source install/setup.bash && \\\n",
+                "  ros2 launch boxbunny_bringup imu_only.launch.py'"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 3. Main System (Hybrid Mode)\n",
+                "Optimized Launch with YOLO Pose + IMU Fusion.\n",
+                "\n",
+                "**Requirements:**\n",
+                "- Intel RealSense camera connected\n",
+                "- IMU nodes should be running (start section 2 first in another terminal)\n",
+                "\n",
+                "**Modes:**\n",
+                "- `Hybrid Mode` (default): Uses IMU for punch detection + YOLO Pose for left/right hand\n",
+                "- `Anticipation Mode`: Uses full RGB-D action recognition model"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/action_prediction && \\\n",
+                "  python tools/inference/live_infer_rgbd.py \\\n",
+                "    --model-config configs/rgbd_boxing_anticipation.py \\\n",
+                "    --model-checkpoint /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/models/action_prediction_model/best_acc_82.4_epoch_161.pth \\\n",
+                "    --yolo-model ../models/checkpoints/yolo26n.pt \\\n",
+                "    --fps 30 \\\n",
+                "    --rgb-res 640x480 \\\n",
+                "    --depth-res 640x480'"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 4. Parameter Tuning\n",
+                "Use these commands to tune detection sensitivity if needed."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Lower thresholds for more sensitive detection\n",
+                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                "  ros2 param set /imu_punch_classifier accel_threshold 8.0 && \\\n",
+                "  ros2 param set /imu_punch_classifier gyro_threshold 1.5 && \\\n",
+                "  ros2 param set /imu_punch_classifier accel_peak_ratio 1.5 && \\\n",
+                "  ros2 param set /imu_punch_classifier gyro_peak_ratio 1.5'"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Check current parameters\n",
+                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                "  ros2 param list /imu_punch_classifier'"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "boxing_ai",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.10.19"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
