--- a/notebooks/unit_tests.ipynb
+++ b/notebooks/unit_tests.ipynb
@@ -26,6 +26,7 @@
                 "source ~/miniconda3/etc/profile.d/conda.sh\n",
                 "conda activate boxing_ai\n",
                 "export PYTHONNOUSERSITE=1\n",
+                "export LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$LD_LIBRARY_PATH\n",
                 "export SETUPTOOLS_USE_DISTUTILS=stdlib\n",
                 "source /opt/ros/humble/setup.bash\n",
                 "source /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/install/setup.bash 2>/dev/null || true\n",
@@ -164,6 +165,27 @@
                 "# Check current parameters\n",
                 "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
                 "  ros2 param list /imu_punch_classifier'"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 5. LLM Chat GUI\n",
+                "Launch the LLM interface for testing."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
+                "  colcon build --symlink-install --packages-select boxbunny_llm && \\\n",
+                "  source install/setup.bash && \\\n",
+                "  ros2 run boxbunny_llm llm_chat_gui'"
             ]
         }
     ],
