--- a/notebooks/unit_tests.ipynb
+++ b/notebooks/unit_tests.ipynb
@@ -80,11 +80,10 @@
                 "\n",
                 "**Workflow:**\n",
                 "1. Wait for IMU connection (green values in display)\n",
-                "2. Select a profile (Straights Only, All Punches, etc.)\n",
-                "3. Click 'Calibrate Default' or 'Calibrate All'\n",
-                "4. Follow prompts - hold still, then punch when prompted\n",
-                "5. Click 'Verify File' to test detection\n",
-                "6. Punch the sensor - detected punches appear in the log"
+                "2. Click 'Calibrate Strike Impact'\n",
+                "3. Follow prompts - hold still, then PUNCH when prompted\n",
+                "4. Click 'Verify File' to test detection\n",
+                "5. Punch the sensor - detected punches appear in the log"
             ]
         },
         {
@@ -100,6 +99,46 @@
                 "  source install/setup.bash && \\\n",
                 "  ros2 launch boxbunny_bringup imu_only.launch.py'"
             ]
+        },
+        {
+             "cell_type": "markdown",
+             "metadata": {},
+             "source": [
+                 "## 2b. Test Height Calibration (Service)\n",
+                 "Trigger height calibration manually via ROS service (normally done via GUI)."
+             ]
+        },
+        {
+             "cell_type": "code",
+             "execution_count": null,
+             "metadata": {},
+             "outputs": [],
+             "source": [
+                 "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                 "  ros2 service call /action_predictor/calibrate_height std_srvs/srv/Trigger \"{}\"'"
+             ]
+        },
+        {
+             "cell_type": "markdown",
+             "metadata": {},
+             "source": [
+                 "## 2c. Test Mode Switch (Service)\n",
+                 "Switch between AI Model and Simple Color modes."
+             ]
+        },
+        {
+             "cell_type": "code",
+             "execution_count": null,
+             "metadata": {},
+             "outputs": [],
+             "source": [
+                 "# Switch to Simple Mode\n",
+                 "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                 "  ros2 service call /action_predictor/set_simple_mode std_srvs/srv/SetBool \"{data: true}\"'\n",
+                 "# Switch back to AI Mode\n",
+                 "# !bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
+                 "#   ros2 service call /action_predictor/set_simple_mode std_srvs/srv/SetBool \"{data: false}\"'"
+             ]
         },
         {
             "cell_type": "markdown",
