--- a/notebooks/unit_tests.ipynb
+++ b/notebooks/unit_tests.ipynb
@@ -5,14 +5,15 @@
             "metadata": {},
             "source": [
                 "# BoxBunny Unit Tests\n",
-                "Quick unit tests for individual components."
+                "Independent unit tests for system components and integration tests."
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Setup Environment\n"
+                "## Setup Environment\n",
+                "Run this first to configure the shell environment."
             ]
         },
         {
@@ -38,28 +39,30 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Build Workspace"
+                "## Build Workspace\n",
+                "**Critical:** Run this to build `boxbunny_msgs` and other packages."
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "build_ws",
             "metadata": {},
             "outputs": [],
             "source": [
-                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
-                "  colcon build --symlink-install && \\\n",
-                "  source install/setup.bash'"
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+                "colcon build --symlink-install\n",
+                "source install/setup.bash"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 1. GUI Standalone Test\n",
-                "Test the main GUI layout (no ROS needed)."
+                "## 1. Unit: GUI Layout\n",
+                "Test the GUI appearance and layout **without** backend services.\n",
+                "**Expectation:** GUI opens. Buttons like \"Start Drill\" will log warnings (\"service not ready\") but not crash."
             ]
         },
         {
@@ -68,22 +71,19 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "!bash -lc 'source /tmp/boxbunny_env.sh && cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_gui/boxbunny_gui && python gui_main.py'"
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_gui/boxbunny_gui\n",
+                "python gui_main.py"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 2. IMU Calibration GUI\n",
-                "Use this for checking IMU connection and calibrating punches.\n",
-                "\n",
-                "**Workflow:**\n",
-                "1. Wait for IMU connection (green values in display)\n",
-                "2. Click 'Calibrate Strike Impact'\n",
-                "3. Follow prompts - hold still, then PUNCH when prompted\n",
-                "4. Click 'Verify File' to test detection\n",
-                "5. Punch the sensor - detected punches appear in the log"
+                "## 2. Unit: Camera & AI (Pose)\n",
+                "Test the **Action Model** (Pose/YOLO) for advanced detection.\n",
+                "**Expectation:** Camera window opens with skeleton tracking debug overlay."
             ]
         },
         {
@@ -92,93 +92,25 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Build and run IMU calibration GUI\n",
-                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
-                "  colcon build --packages-select boxbunny_imu --symlink-install && \\\n",
-                "  source install/setup.bash && \\\n",
-                "  ros2 launch boxbunny_bringup imu_only.launch.py'"
-            ]
-        },
-        {
-             "cell_type": "markdown",
-             "metadata": {},
-             "source": [
-                 "## 2b. Test Height Calibration (Service)\n",
-                 "Trigger height calibration manually via ROS service (normally done via GUI)."
-             ]
-        },
-        {
-             "cell_type": "code",
-             "execution_count": null,
-             "metadata": {},
-             "outputs": [],
-             "source": [
-                 "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                 "  ros2 service call /action_predictor/calibrate_height std_srvs/srv/Trigger \"{}\"'"
-             ]
-        },
-        {
-             "cell_type": "markdown",
-             "metadata": {},
-             "source": [
-                 "## 2c. Test Mode Switch (Service)\n",
-                 "Switch between AI Model and Simple Color modes."
-             ]
-        },
-        {
-             "cell_type": "code",
-             "execution_count": null,
-             "metadata": {},
-             "outputs": [],
-             "source": [
-                 "# Switch to Simple Mode\n",
-                 "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                 "  ros2 service call /action_predictor/set_simple_mode std_srvs/srv/SetBool \"{data: true}\"'\n",
-                 "# Switch back to AI Mode\n",
-                 "# !bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                 "#   ros2 service call /action_predictor/set_simple_mode std_srvs/srv/SetBool \"{data: false}\"'"
-             ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## 3. Main System (Hybrid Mode)\n",
-                "Optimized Launch with YOLO Pose + IMU Fusion.\n",
-                "\n",
-                "**Requirements:**\n",
-                "- Intel RealSense camera connected\n",
-                "- IMU nodes should be running (start section 2 first in another terminal)\n",
-                "\n",
-                "**Modes:**\n",
-                "- `Hybrid Mode` (default): Uses IMU for punch detection + YOLO Pose for left/right hand\n",
-                "- `Anticipation Mode`: Uses full RGB-D action recognition model"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/action_prediction && \\\n",
-                "  python tools/inference/live_infer_rgbd.py \\\n",
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/action_prediction\n",
+                "python tools/inference/live_infer_rgbd.py \\\n",
                 "    --model-config configs/rgbd_boxing_anticipation.py \\\n",
                 "    --model-checkpoint /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/models/action_prediction_model/best_acc_82.4_epoch_161.pth \\\n",
                 "    --yolo-model ../models/checkpoints/yolo26n.pt \\\n",
                 "    --fps 30 \\\n",
                 "    --rgb-res 640x480 \\\n",
-                "    --depth-res 640x480'"
+                "    --depth-res 640x480"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 4. Parameter Tuning\n",
-                "Use these commands to tune detection sensitivity if needed."
+                "## 3. Unit: IMU Calibration\n",
+                "Test IMU connectivity and calibration GUI.\n",
+                "**Expectation:** Independent IMU GUI opens."
             ]
         },
         {
@@ -187,31 +119,21 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Lower thresholds for more sensitive detection\n",
-                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                "  ros2 param set /imu_punch_classifier accel_threshold 8.0 && \\\n",
-                "  ros2 param set /imu_punch_classifier gyro_threshold 1.5 && \\\n",
-                "  ros2 param set /imu_punch_classifier accel_peak_ratio 1.5 && \\\n",
-                "  ros2 param set /imu_punch_classifier gyro_peak_ratio 1.5'"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Check current parameters\n",
-                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                "  ros2 param list /imu_punch_classifier'"
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws\n",
+                "colcon build --packages-select boxbunny_imu --symlink-install\n",
+                "source install/setup.bash\n",
+                "ros2 launch boxbunny_bringup imu_only.launch.py"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 5. LLM Chat GUI\n",
-                "Launch the LLM interface for testing."
+                "## 4. Unit: Color Tracking (Simple)\n",
+                "Test **basic punch detection** using HSV color tracking (no heavy AI).\n",
+                "**Expectation:** Launches Camera + Glove Tracker. Publishes `PunchEvent` messages when colored gloves move fast."
             ]
         },
         {
@@ -220,11 +142,59 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "!bash -lc 'source /tmp/boxbunny_env.sh && \\\n",
-                "  cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws && \\\n",
-                "  colcon build --symlink-install --packages-select boxbunny_llm && \\\n",
-                "  source install/setup.bash && \\\n",
-                "  ros2 run boxbunny_llm llm_chat_gui'"
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "# Launches RealSense Camera + Glove Tracker Node\n",
+                "ros2 launch boxbunny_bringup vision_only.launch.py"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 5. Integration: Reaction Drill (Full System)\n",
+                "Verify the complete user story: Drill Manager + Camera/AI + GUI.\n",
+                "**Workflow:**\n",
+                "1. Run this cell.\n",
+                "2. Wait for Camera window and GUI to open.\n",
+                "3. In GUI -> **Reaction Drill** -> **START**.\n",
+                "4. React to cues. (Uses **Action Model** by default)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "# 1. Start Drill Manager\n",
+                "ros2 run boxbunny_drills reaction_drill_manager &\n",
+                "PID_DRILL=$!\n",
+                "echo \"Started Drill Manager ($PID_DRILL)\"\n",
+                "sleep 2\n",
+                "\n",
+                "# 2. Start Camera/AI (Action Model)\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/action_prediction\n",
+                "python tools/inference/live_infer_rgbd.py \\\n",
+                "    --model-config configs/rgbd_boxing_anticipation.py \\\n",
+                "    --model-checkpoint /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/models/action_prediction_model/best_acc_82.4_epoch_161.pth \\\n",
+                "    --yolo-model ../models/checkpoints/yolo26n.pt \\\n",
+                "    --fps 30 \\\n",
+                "    --rgb-res 640x480 \\\n",
+                "    --depth-res 640x480 &\n",
+                "PID_CAMERA=$!\n",
+                "echo \"Started Camera ($PID_CAMERA)\"\n",
+                "sleep 8\n",
+                "\n",
+                "# 3. Start GUI\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_gui/boxbunny_gui\n",
+                "python gui_main.py\n",
+                "\n",
+                "# Cleanup\n",
+                "echo \"Stopping processes...\"\n",
+                "kill $PID_DRILL $PID_CAMERA || true"
             ]
         }
     ],
