update 1 more unit test

--- a/notebooks/unit_tests.ipynb
+++ b/notebooks/unit_tests.ipynb
@@ -217,32 +217,7 @@
             "execution_count": null,
             "id": "b80aa735",
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "[0.646s] WARNING:colcon.colcon_core.package_selection:Some selected packages are already built in one or more underlay workspaces:\n",
-                        "\t'boxbunny_drills' is in: /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/install/boxbunny_drills\n",
-                        "If a package in a merged underlay workspace is overridden and it installs headers, then all packages in the overlay must sort their include directories by workspace order. Failure to do so may result in build failures or undefined behavior at run time.\n",
-                        "If the overridden package is used by another package in any underlay, then the overriding package in the overlay must be API and ABI compatible or undefined behavior at run time may occur.\n",
-                        "\n",
-                        "If you understand the risks and want to override a package anyways, add the following to the command line:\n",
-                        "\t--allow-overriding boxbunny_drills\n",
-                        "\n",
-                        "This may be promoted to an error in a future release of colcon-override-check.\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "[INFO] [launch]: All log files can be found below /home/boxbunny/.ros/log/2026-01-29-22-32-54-225307-ubuntu-84364\n",
-                        "[INFO] [launch]: Default logging verbosity is set to INFO\n",
-                        "[INFO] [python3-1]: process started with pid [84365]\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "%%bash\n",
                 "source /tmp/boxbunny_env.sh\n",
@@ -261,6 +236,30 @@
                 "\n",
                 "# Launch Height Calibration\n",
                 "ros2 launch boxbunny_drills height_calibration.launch.py"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "4bf554f1",
+            "metadata": {},
+            "source": [
+                "## 6.LLM Chat GUI\n",
+                "Launch the LLM interface for testing."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "d8457c12",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%%bash\n",
+                "source /tmp/boxbunny_env.sh\n",
+                "cd /home/boxbunny/Desktop/doomsday_integration/boxing_robot_ws/src/boxbunny_llm/boxbunny_llm\n",
+                "\n",
+                "# Run GUI directly with conda python (has PySide6)\n",
+                "python llm_chat_gui.py"
             ]
         }
     ],
